--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/multer": "^1.4.5",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
