--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "joi": "^17.4.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/joi": "^17.2.3",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
