--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.1",
     "@nestjs/typeorm": "^7.1.5",
     "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
     "joi": "^17.4.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
@@ -37,6 +39,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "streamifier": "^0.1.1",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
