--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    
+    "root": "test",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
